--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^9.0.0",
-    "multer": "^1.4.0"
+    "multer": "^1.4.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
