--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-graphql": "^0.12.0",
     "express-validator": "^7.3.1",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^9.0.0",
     "multer": "^1.4.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "validator": "^13.15.23"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
